# vsss-ufpr-server

./: .gitignore  CMakeLists.txt  README.md
src/: global.cpp  main.cpp
